Fixing footer view on mobile

--- a/resources/css/layout/core.less
+++ b/resources/css/layout/core.less
@@ -89,6 +89,17 @@
         margin: 0;
         margin-right: 2em;
 
+        @media screen and (max-width: @breakPointMobile) {
+            font-size: 1.1em;
+            margin: 0;
+            margin-top: 1em;
+            float: none;
+
+            &:first-child {
+                margin-top: 0;
+            }
+        }
+
         .footer-section-entry {
             list-style: none;
 
